--- a/app/src/main/res/layout/singleitem.xml
+++ b/app/src/main/res/layout/singleitem.xml
@@ -5,7 +5,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     app:cardCornerRadius="6dp"
     app:cardUseCompatPadding="true"
-    android:layout_margin="24dp">
+    android:layout_marginTop="24dp"
+    android:layout_marginLeft="24dp"
+    android:layout_marginRight="24dp">
 
    <RelativeLayout
        android:layout_width="match_parent"
@@ -50,18 +52,30 @@
           android:layout_width="1dp"
           android:layout_height="100dp"
           android:background="?android:attr/listDivider"
-          android:layout_toRightOf="@+id/NamaBus"/>
+          android:layout_toRightOf="@+id/NamaBus"
+          android:layout_marginLeft="50dp"/>
 
       <TextView
           android:id="@+id/Rating"
-          android:layout_width="wrap_content"
+          android:layout_width="30dp"
           android:layout_height="wrap_content"
-          android:layout_toRightOf="@+id/divider"
           android:layout_marginLeft="13dp"
           android:layout_marginTop="5dp"
-          android:text="Rating"
-          android:textColor="#FC8686"
-          android:textSize="15sp"/>
+          android:layout_toRightOf="@+id/divider"
+          android:text="4"
+          android:textSize="15sp"
+          android:background="@color/biru"
+          android:gravity="center"/>
+
+      <TextView
+          android:id="@+id/Rate"
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+          android:text="jumlah"
+          android:layout_toRightOf="@+id/Rating"
+          android:layout_marginLeft="13dp"
+          android:layout_marginTop="5dp"
+          android:textColor="@color/black"/>
 
       <TextView
           android:id="@+id/Harga"
@@ -75,6 +89,18 @@
           android:textColor="@color/biru"
           android:textSize="20sp"
           android:textStyle="bold"/>
+
+      <Button
+          android:id="@+id/booking"
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+          android:layout_toRightOf="@+id/divider"
+          android:layout_below="@+id/Harga"
+          android:text="Book Now -> "
+          android:textSize="10sp"
+          android:backgroundTint="@color/biru"/>
+
+
    </RelativeLayout>
 
 </androidx.cardview.widget.CardView>
