--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -67,6 +67,14 @@
         android:layout_marginTop="10dp"
         android:fontFamily="sans-serif-condensed-light"/>
 
+    <Button
+        android:id="@+id/loginGoogle"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Login With Google"
+        android:layout_marginTop="10dp"
+        android:backgroundTint="@color/biru"/>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="40dp"
