--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -98,6 +98,14 @@
             android:layout_marginTop="10dp"
             android:fontFamily="sans-serif-condensed-light"/>
 
+        <Button
+            android:id="@+id/RegisAuth"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Register With Google"
+            android:backgroundTint="@color/biru"
+            android:layout_marginTop="15dp"/>
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="40dp"
