--- a/app/src/main/res/layout/singleitem.xml
+++ b/app/src/main/res/layout/singleitem.xml
@@ -47,6 +47,17 @@
           android:textColor="@color/purple_200"
           android:textSize="20sp"/>
 
+      <TextView
+          android:id="@+id/BusEstimate"
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+          android:layout_below="@id/BusHours"
+          android:layout_marginLeft="13dp"
+          android:layout_marginTop="5dp"
+          android:text="Hours"
+          android:textColor="@color/gray"
+          android:textSize="15sp"/>
+
       <View
           android:id="@+id/divider"
           android:layout_width="1dp"
