--- a/app/src/main/res/layout/activity_seat.xml
+++ b/app/src/main/res/layout/activity_seat.xml
@@ -49,7 +49,192 @@
                 android:layout_marginTop="10dp"/>
 
         </LinearLayout>
-
     </androidx.appcompat.widget.Toolbar>
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="430dp"
+        android:layout_marginTop="125dp"
+        app:layout_constraintTop_toTopOf="@+id/toolbar"
+        tools:layout_editor_absoluteX="0dp"
+        android:padding="5dp"
+        android:gravity="center">
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:id="@+id/baris1">
+
+            <RelativeLayout
+                android:id="@+id/A1"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:background="@color/purple_500"
+                android:layout_marginTop="20dp"
+                android:clickable="true"/>
+
+            <RelativeLayout
+                android:id="@+id/A2"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:background="@color/purple_500"
+                android:layout_marginTop="20dp"/>
+
+            <RelativeLayout
+                android:id="@+id/A3"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:background="@color/purple_500"
+                android:layout_marginTop="20dp"/>
+
+            <RelativeLayout
+                android:id="@+id/A4"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:background="@color/purple_500"
+                android:layout_marginTop="20dp"/>
+            <RelativeLayout
+                android:id="@+id/A5"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:background="@color/purple_500"
+                android:layout_marginTop="20dp"/>
+
+            <RelativeLayout
+                android:id="@+id/A6"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:background="@color/purple_500"
+                android:layout_marginTop="20dp"/>
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/baris2"
+            android:layout_marginStart="50dp"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:layout_toRightOf="@+id/baris1">
+
+            <RelativeLayout
+                android:id="@+id/B1"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:background="@color/purple_500"
+                android:layout_marginTop="20dp"/>
+
+            <RelativeLayout
+                android:id="@+id/B2"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:background="@color/purple_500"
+                android:layout_marginTop="20dp"/>
+
+            <RelativeLayout
+                android:id="@+id/B3"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:background="@color/purple_500"
+                android:layout_marginTop="20dp"/>
+
+            <RelativeLayout
+                android:id="@+id/B4"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:background="@color/purple_500"
+                android:layout_marginTop="20dp"/>
+            <RelativeLayout
+                android:id="@+id/B5"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:background="@color/purple_500"
+                android:layout_marginTop="20dp"/>
+
+            <RelativeLayout
+                android:id="@+id/B6"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:background="@color/purple_500"
+                android:layout_marginTop="20dp"/>
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/baris3"
+            android:layout_marginStart="50dp"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:layout_toRightOf="@+id/baris2">
+
+            <RelativeLayout
+                android:id="@+id/C1"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:background="@color/purple_500"
+                android:layout_marginTop="20dp"/>
+
+            <RelativeLayout
+                android:id="@+id/C2"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:background="@color/purple_500"
+                android:layout_marginTop="20dp"/>
+
+            <RelativeLayout
+                android:id="@+id/C3"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:background="@color/purple_500"
+                android:layout_marginTop="20dp"/>
+
+            <RelativeLayout
+                android:id="@+id/C4"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:background="@color/purple_500"
+                android:layout_marginTop="20dp"/>
+            <RelativeLayout
+                android:id="@+id/C5"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:background="@color/purple_500"
+                android:layout_marginTop="20dp"/>
+
+            <RelativeLayout
+                android:id="@+id/C6"
+                android:layout_width="50dp"
+                android:layout_height="55dp"
+                android:layout_marginTop="20dp"
+                android:background="@color/purple_500" />
+
+        </LinearLayout>
+
+    </RelativeLayout>
+
+    <Button
+        android:id="@+id/buy"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="4dp"
+        android:backgroundTint="@color/biru"
+        android:text="BOOKING"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <TextView
+        android:id="@+id/TOTALHARGA"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        android:text="RP"
+        android:textColor="@color/black"
+        android:textSize="20sp"
+        app:layout_constraintBottom_toTopOf="@+id/buy"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
