--- a/app/src/main/res/layout/activity_contact.xml
+++ b/app/src/main/res/layout/activity_contact.xml
@@ -94,7 +94,7 @@
                 android:layout_marginTop="12dp"
                 android:ems="10"
                 android:hint="Age"
-                android:inputType="phone"
+                android:inputType="number"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.075"
                 app:layout_constraintStart_toStartOf="parent"
@@ -132,6 +132,7 @@
                 android:textColor="@color/black"/>
 
             <RadioGroup
+                android:id="@+id/gender"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
