--- a/app/src/main/res/layout/activity_detail_payment.xml
+++ b/app/src/main/res/layout/activity_detail_payment.xml
@@ -64,7 +64,7 @@
                 android:textSize="12sp" />
 
             <TextView
-                android:id="@+id/textView13"
+                android:id="@+id/nameContact"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/textView12"
@@ -76,14 +76,14 @@
                 android:id="@+id/textView15"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/textView13"
+                android:layout_below="@+id/nameContact"
                 android:layout_marginTop="25dp"
                 android:text="Phone Number"
                 android:textColor="@color/gray"
                 android:textSize="12sp" />
 
             <TextView
-                android:id="@+id/textView16"
+                android:id="@+id/noContact"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/textView15"
@@ -114,7 +114,7 @@
                 android:textSize="12sp" />
 
             <TextView
-                android:id="@+id/textView18"
+                android:id="@+id/busContact"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/textView17"
@@ -127,14 +127,14 @@
                 android:id="@+id/textView19"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/textView18"
+                android:layout_below="@+id/busContact"
                 android:layout_marginTop="25dp"
                 android:text="Schedule"
                 android:textColor="@color/gray"
                 android:textSize="12sp" />
 
             <TextView
-                android:id="@+id/textView20"
+                android:id="@+id/jamAwal"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/textView19"
@@ -147,13 +147,13 @@
                 android:id="@+id/divider2"
                 android:layout_width="1dp"
                 android:layout_height="50dp"
-                android:layout_below="@+id/textView20"
+                android:layout_below="@+id/jamAwal"
                 android:background="?android:attr/listDivider"
                 android:layout_marginLeft="20dp"
                 android:backgroundTint="@color/black"/>
 
             <TextView
-                android:id="@+id/textView21"
+                android:id="@+id/jamAkhir"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/divider2"
@@ -163,99 +163,36 @@
                 android:textStyle="italic" />
 
             <TextView
-                android:id="@+id/textView22"
+                android:id="@+id/namaAwal"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/textView19"
                 android:layout_marginLeft="30dp"
                 android:layout_marginTop="1dp"
-                android:layout_toRightOf="@+id/textView20"
+                android:layout_toRightOf="@+id/jamAwal"
                 android:text="Nama Awal"
                 android:textColor="@color/black"
                 android:textSize="14sp"
                 android:textStyle="italic" />
 
-            <TextView
-                android:id="@+id/textView23"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/textView22"
-                android:layout_marginLeft="30dp"
-                android:layout_toRightOf="@+id/textView20"
-                android:text="Terminal sei"
-                android:textColor="@color/black"
-                android:textSize="12sp" />
 
             <TextView
-                android:id="@+id/textView24"
+                android:id="@+id/namaAkhir"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/divider2"
                 android:layout_marginLeft="30dp"
                 android:layout_marginTop="-5dp"
-                android:layout_toRightOf="@+id/textView21"
+                android:layout_toRightOf="@+id/jamAkhir"
                 android:text="Nama AKhir"
                 android:textColor="@color/black"
                 android:textSize="14sp"
                 android:textStyle="italic" />
 
-            <TextView
-                android:id="@+id/textView25"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/textView24"
-                android:layout_marginLeft="30dp"
-                android:layout_toRightOf="@+id/textView20"
-                android:text="Terminal Lempake"
-                android:textColor="@color/black"
-                android:textSize="12sp" />
 
-            <TextView
-                android:id="@+id/textView26"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/textView18"
-                android:layout_alignParentRight="true"
-                android:layout_marginLeft="30dp"
-                android:layout_marginTop="-5dp"
-                android:text="Seat No"
-                android:textColor="@color/black"
-                android:textSize="14sp"
-                android:textStyle="italic" />
-
-            <TextView
-                android:id="@+id/textView27"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/textView26"
-                android:layout_alignParentRight="true"
-                android:text="1"
-                android:textColor="@color/black"
-                android:textSize="12sp" />
 
         </RelativeLayout>
 
-    </androidx.cardview.widget.CardView>
-
-    <androidx.cardview.widget.CardView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:cardBackgroundColor="#DCD6D6">
-
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:padding="12dp">
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Tickets"
-                android:textColor="@color/black"
-                android:textSize="14sp" />
-
-        </RelativeLayout>
     </androidx.cardview.widget.CardView>
 
     <androidx.cardview.widget.CardView
@@ -271,10 +208,19 @@
             android:padding="12dp">
 
             <TextView
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Tickets"
+                android:text="Total"
                 android:textColor="@color/white"
+                android:textSize="14sp" />
+
+            <TextView
+                android:id="@+id/hargaDetail"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Rp"
+                android:textColor="@color/white"
+                android:layout_alignParentRight="true"
                 android:textSize="14sp" />
 
         </RelativeLayout>
