--- a/app/src/main/res/layout/ratingpop.xml
+++ b/app/src/main/res/layout/ratingpop.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    app:cardBackgroundColor="@color/white"
+    app:cardBackgroundColor="@color/cardview_light_background"
     app:cardCornerRadius="10dp"
     android:layout_margin="24dp">
 
@@ -34,24 +34,27 @@
 
         <RatingBar
             android:id="@+id/ratingBar"
-            style="@android:style/Widget.Material.Light.RatingBar.Small"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/judul1"
             android:layout_centerInParent="true"
-            android:layout_margin="20dp"
-            android:background="#000000"
+            android:layout_marginStart="20dp"
+            android:layout_marginTop="20dp"
+            android:layout_marginEnd="20dp"
+            android:layout_marginBottom="20dp"
             android:backgroundTint="#171717"
             android:numStars="5"
-            android:rating="1.2" />
+            android:rating="5"
+            android:stepSize="0.5" />
 
         <Button
+            android:id="@+id/ratee"
             android:layout_width="200dp"
             android:layout_height="wrap_content"
             android:layout_below="@+id/ratingBar"
-            android:text="Rate"
             android:layout_centerInParent="true"
-            android:backgroundTint="@color/black"/>
+            android:backgroundTint="@color/black"
+            android:text="Rate" />
 
     </RelativeLayout>
 
